# rama-rdv

./: LICENSE  README.md  pyproject.toml
src/denoising/: test.ipynb
src/orpel_rdv/: env.yaml  pipeline.yaml
src/orpel_rdv/tasks/: test.py
src/rc2_rdv/: README.md  ambit2hdf5.ipynb  bgm.ipynb  env_example.yaml  env_example_twining.yaml  peak_match.ipynb  pipeline.html  pipeline.yaml  pipeline_calibration.yaml  pipeline_calibration_old.yaml  pipeline_import.yaml  pipeline_nexus.yaml  pipeline_templates.yaml  pipeline_twinning.html  pipeline_twinning.yaml
src/rc2_rdv/data_analysis/: README.md  TODO.md  calibration_verify.py  config_pipeline_example.json  env.yaml  env_example.yaml  metadata_match.py  pipeline.yaml  pipeline_templates.yaml  spectraframe_calibrate.py  spectraframe_load.py  spectraframe_tips.py  spectraframe_ycalibrate.py  templates_assessment.py  templates_calibration.py  templates_load.py  templates_prefill.py  templates_read.py  utils.py
src/rc2_rdv/import/: auth.py  createinvestigation.py  delete_investigation.py  env_example.yaml  import.py  nexus_analyze.py  nexus_index.py  nexus_upload.py  pipeline.yaml  pipeline_delete.yaml  pipeline_import_nexus.yaml  pipeline_rruf.yaml  pipeline_slopp.yaml  raman_slopp.py  rruf.py  service_export.py  task_datamodel.py  task_export2solr.py  task_index_evaluation.py  task_solrquery.py  task_template2metadata.py  task_templateimport.py  templates_import.py
src/rc2_rdv/nexus_conversion/: README.md  convert2nexus.py  env_example.yaml  pipeline.yaml  substance_index.py
src/rc2_rdv/tasks/: bgm.py  calibration.py  calibration_apply.py  calibration_assessment.py  calibration_load.py  calibration_neon.py  calibration_nexus.py  converter.py  demo_calibration.ipynb  load_led.py  load_leds.py  load_spectra.py  match_metadata.py  read_metadata.py  templates_assessment.py  (+10 more)
src/vite_rdv/: package-lock.json  package.json
(+10 files in other folders)
